--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 
     <groupId>com.example.springboot</groupId>
-    <artifactId>boot-01-helloworld</artifactId>
+    <artifactId>ssc-hanckathon-2023-draft</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
